received feedback that the arrows from BIO would overlap the content in some displays, so I corrected that

--- a/screen-scaling/intermediate.css
+++ b/screen-scaling/intermediate.css
@@ -1,5 +1,6 @@
 @media screen and (min-width: 1090px) and (max-width: 1279px) {
   #bio {
-    height: 100%;
+    height: 60em;
   }
 }
+
