--- a/screen-scaling/ipad.css
+++ b/screen-scaling/ipad.css
@@ -132,3 +132,14 @@
   }
 
 }
+
+@media screen and (max-width: 991px) and (min-width: 737px) {
+  #bio {
+    height: 60em;
+  }
+
+  #resume {
+    height: 75em;
+  }
+}
+
