--- a/screen-scaling/small-laptops.css
+++ b/screen-scaling/small-laptops.css
@@ -4,11 +4,11 @@
   }
 
   #bio {
-    height: 750px;
+    height: 60em;
   }
 
   #resume {
-    height: 850px;
+    height: 60em;
   }
 
   .skills-text-content {
